[gd_scene load_steps=22 format=2]

[ext_resource path="res://asset/character/Ninja/Ninja.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://asset/04B_30__.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://asset/sprite/coin_.png" type="Texture" id=5]
[ext_resource path="res://asset/Heart.png" type="Texture" id=6]
[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=7]
[ext_resource path="res://asset/pause.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 9.25 )

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12.25, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 54, 55, 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.524, 7 ), Vector2( 12.5, 6.5 ), Vector2( 13, 3.86456 ), Vector2( 13.5, 3.56772 ), Vector2( 13.5, 5.28386 ), Vector2( 13.5, 7.78384 ), Vector2( 13, 6.5 ), Vector2( 12.262, 6.75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12.25, 8 ), Vector2( 12.5925, 7.08334 ), Vector2( 12.9349, 7.375 ), Vector2( 15.8887, 7.33334 ), Vector2( 11.5719, 7 ), Vector2( 13.8433, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle-coin"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=12]

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( -13, -7 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14, -7 )
texture = ExtResource( 1 )
hframes = 9
vframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.25, 7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 7 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 9, 4 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="heart" type="Sprite" parent="Camera2D"]
position = Vector2( 213, -129 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 14.25, 31.25, 71, 32 )

[node name="Label" type="Label" parent="Camera2D"]
margin_left = -31.0
margin_top = -144.0
margin_right = 9.0
margin_bottom = -113.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="coins" type="Node2D" parent="Camera2D"]
position = Vector2( -239, -134 )

[node name="Sprite" type="Sprite" parent="Camera2D/coins"]
position = Vector2( 3, 14 )
scale = Vector2( 2.725, 3.593 )
texture = ExtResource( 5 )
hframes = 12
region_rect = Rect2( 3, 3, 10, 10 )

[node name="coins_number" type="Label" parent="Camera2D/coins"]
margin_left = 23.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/coins"]
autoplay = "idle-coin"
anims/RESET = SubResource( 10 )
anims/idle-coin = SubResource( 11 )

[node name="Button" type="Button" parent="Camera2D"]
margin_left = 194.0
margin_top = 93.0
margin_right = 718.0
margin_bottom = 611.0
rect_scale = Vector2( 0.099, 0.099 )
icon = ExtResource( 8 )
flat = true

[node name="pause_menu" type="Control" parent="Camera2D"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/pause_menu"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -465.0
margin_top = -278.0
margin_right = 644.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/pause_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -74.5
margin_right = 108.5
margin_bottom = 74.5

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/pause_menu/MarginContainer"]
margin_right = 217.0
margin_bottom = 149.0

[node name="Resume" type="Button" parent="Camera2D/pause_menu/MarginContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "Resume"
flat = true

[node name="retry" type="Button" parent="Camera2D/pause_menu/MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 217.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "retry"
flat = true

[node name="back" type="Button" parent="Camera2D/pause_menu/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 217.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "Back"
flat = true

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 31, 7 )
shape = SubResource( 12 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_Attack_animation_finished"]
[connection signal="pressed" from="Camera2D/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Camera2D/pause_menu/MarginContainer/VBoxContainer/Resume" to="Camera2D/pause_menu" method="_on_Resume_pressed"]
[connection signal="pressed" from="Camera2D/pause_menu/MarginContainer/VBoxContainer/retry" to="Camera2D/pause_menu" method="_on_retry_pressed"]
[connection signal="pressed" from="Camera2D/pause_menu/MarginContainer/VBoxContainer/back" to="Camera2D/pause_menu" method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
